css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");

/* *********************** */
/* VARIABLES */
/* *********************** */

:root {
  --Red: hsl(0, 78%, 62%);
  --Cyan: hsl(180, 62%, 55%);
  --Orange: hsl(34, 97%, 64%);
  --Blue: hsl(212, 86%, 64%);

  --Very-Dark-Blue: hsla(0, 0%, 100%, 0.9);
  --Grayish-Blue: hsl(232, 15%, 81%);
  --Very-Light-Gray: hsl(0, 0%, 98%);
}

/* *********************** */
/* RESETS */
/* *********************** */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img,
picture,
video,
canvas,
svg {
  max-inline-size: 100%;
  block-size: auto;
}

a {
  text-decoration: none;
  color: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

ol,
ul {
  list-style: none;
}

input,
button,
textarea,
select {
  font: inherit;
  border: none;
}

/* *********************** */
/* LAYOUT */
/* *********************** */

body {
  min-height: 100vh;
  display: grid;
  place-content: center;
  font-family: "Poppins", sans-serif;
  padding: 20px;

  background-image: url(../images/background.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.card-container {
  display: grid;
  place-content: center;
  gap: 20px;
}

/* *********************** */
/* CARD GENERAL STYLING */
/* *********************** */

header {
  display: grid;
  place-content: center;
  text-align: center;
  margin-bottom: 60px;
}

header p {
  max-width: 540px;
  font-size: clamp(0.88rem, calc(0.84rem + 0.18vw), 1rem);
  color: var(--Grayish-Blue);
}

h1 {
  font-size: clamp(1.25rem, calc(0.96rem + 1.43vw), 2.25rem);
  font-weight: 200;
  color: var(--Grayish-Blue);
}

h2 {
  font-size: clamp(1.25rem, calc(0.96rem + 1.43vw), 2.25rem);
  font-weight: 600;
  color: var(--Very-Dark-Blue);
  margin-bottom: 20px;
}

.card {
  max-width: 350px;
  min-height: 250px;
  padding: 20px;
  border-radius: 6px;
  box-shadow: 0px 2px 15px 4px rgba(0, 0, 0, 0.1);

  backdrop-filter: blur(16px) saturate(100%);
  -webkit-backdrop-filter: blur(16px) saturate(100%);
  background-color: rgba(255, 255, 255, 0.2);
}

.card h3 {
  color: var(--Very-Dark-Blue);
}

.card p {
  font-size: 14px;
  color: var(--Grayish-Blue);
}

/* *********************** */
/* CARD STYLING */
/* *********************** */

.supervisor-card {
  position: relative;
  border-top: 4px solid var(--Cyan);
  transition: 0.7s ease;
}

.supervisor-card:hover {
  border-bottom: 4px solid var(--Cyan);
}

.supervisor-card:before {
  position: absolute;
  content: "";
  background-image: url(../images/icon-supervisor.svg);
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  top: 61%;
  left: 70%;
}

.team-card {
  position: relative;
  border-top: 4px solid var(--Red);
  transition: 0.7s ease;
}

.team-card:hover {
  border-bottom: 4px solid var(--Red);
}

.team-card:before {
  position: absolute;
  content: "";
  background-image: url(../images/icon-team-builder.svg);
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  top: 61%;
  left: 70%;
}

.karma-card {
  position: relative;
  border-top: 4px solid var(--Orange);
  transition: 0.7s ease;
}
.karma-card:hover {
  border-bottom: 4px solid var(--Orange);
}

.karma-card:before {
  position: absolute;
  content: "";
  background-image: url(../images/icon-karma.svg);
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  top: 61%;
  left: 70%;
}

.calculator-card {
  position: relative;
  border-top: 4px solid var(--Blue);
  transition: 0.7s ease;
}

.calculator-card:hover {
  border-bottom: 4px solid var(--Blue);
}

.calculator-card:before {
  position: absolute;
  content: "";
  background-image: url(../images/icon-calculator.svg);
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  top: 61%;
  left: 70%;
}

/* *********************** */
/* MEDIA QUERY */
/* *********************** */

@media (min-width: 600px) {
  .card-container {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    gap: 20px;
  }
}

@media (min-width: 900px) {
  .card-container {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas:
      "supervisor team calculator"
      "supervisor karma calculator";
    gap: 20px;
  }

  .karma-card {
    grid-area: karma;
  }

  .calculator-card {
    grid-area: calculator;
    align-self: center;
  }

  .team-card {
    grid-area: team;
  }

  .supervisor-card {
    grid-area: supervisor;
    align-self: center;
  }
}

/* *********************** */
/*  ENTRANCE ANIMATION */
/* *********************** */

.header-entrance {
  -webkit-animation: header-entrance 2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: header-entrance 2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

@-webkit-keyframes header-entrance {
  0% {
    -webkit-transform: translateZ(-80px);
    transform: translateZ(-80px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    opacity: 1;
  }
}
@keyframes header-entrance {
  0% {
    -webkit-transform: translateZ(-80px);
    transform: translateZ(-80px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    opacity: 1;
  }
}

.entrance-animation {
  -webkit-animation: entrance-animation 0.8s
    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
  animation: entrance-animation 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}

@-webkit-keyframes entrance-animation {
  0% {
    -webkit-transform: rotateX(80deg);
    transform: rotateX(80deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateX(0);
    transform: rotateX(0);
    opacity: 1;
  }
}
@keyframes entrance-animation {
  0% {
    -webkit-transform: rotateX(80deg);
    transform: rotateX(80deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateX(0);
    transform: rotateX(0);
    opacity: 1;
  }
}

